[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit-folium>=0.25.0",
    "streamlit>=1.46.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "folium>=0.20.0",
    "sendgrid>=6.12.4",
    "twilio>=9.6.4",
]
